--- a/frontend/src/components/AlbumsPage/AlbumsPage.css
+++ b/frontend/src/components/AlbumsPage/AlbumsPage.css
@@ -15,9 +15,28 @@
   width: 80%;
 }
 
+.albums-page-albums {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .albums-page-container > h1 {
   color: black;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.album-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.album-container > img {
+  width: 500px;
+  height: 500px;
 }
