--- a/frontend/src/components/AlbumsPage/AlbumsPage.css
+++ b/frontend/src/components/AlbumsPage/AlbumsPage.css
@@ -3,23 +3,30 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   width: 100%;
   min-height: 100%;
   background-color: #c2c2c2;
 }
 
-.albums-page {
-  background-color: white;
-  height: 100vh;
-  width: 80%;
+.albums-page-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .albums-page-albums {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
   align-items: center;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .albums-page-container > h1 {
@@ -34,9 +41,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .album-container > img {
+  margin: 0 10px;
   width: 500px;
-  height: 500px;
+  height: 100%;
 }
