--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -6,25 +6,17 @@ html {
 
 #nav-bar-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   text-align: center;
-  width: 100%;
+  justify-content: center;
+  margin: auto;
+  width: 80%;
   height: 46px;
   background-color: #333;
 }
 
-#nav-bar{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
-  height: 100%;
-}
-
-#title {
-  background-color: #666;
+#nav-bar {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -33,28 +25,40 @@ html {
   height: 100%;
 }
 
-#title:hover {
+#title {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5em;
+}
+
+#top-logo {
+  width: 100%;
+  height: 100%;
   background-color: white;
 }
 
-
 #left-nav-links {
   display: flex;
-  width: 20%;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  justify-content: flex-start;
+  width: 100%;
+  height: 100%;
 }
 
-#nav-links{
+#nav-links {
   display: flex;
-  width: 20%;
+  width: 100%;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 #search-bar-container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -62,21 +66,17 @@ html {
 }
 
 #search-bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
   width: 80%;
   height: 80%;
   color: #666;
   outline: 0;
   border: 0;
   font-size: 1.2em;
-  font-family: 'Lato';
+  font-family: "Lato";
   font-weight: 300;
   padding: 0.5em;
   border-radius: 5px;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
   background: #e5e5e5;
 }
 
@@ -86,8 +86,8 @@ html {
   justify-content: center;
   align-items: center;
   background-color: #333;
-  border-left: solid 1px rgba(0,0,0,.5);
-  border-right: solid 1px rgba(0,0,0,.5);
+  border-left: solid 1px rgba(0, 0, 0, 0.5);
+  border-right: solid 1px rgba(0, 0, 0, 0.5);
   text-align: center;
   height: 46px;
   width: 104px;
@@ -102,8 +102,8 @@ html {
   justify-content: center;
   align-items: center;
   background-color: #333;
-  border-left: solid 1px rgba(0,0,0,.5);
-  border-right: solid 1px rgba(0,0,0,.5);
+  border-left: solid 1px rgba(0, 0, 0, 0.5);
+  border-right: solid 1px rgba(0, 0, 0, 0.5);
   text-align: center;
   height: 46px;
   width: 104px;
@@ -118,8 +118,8 @@ html {
   justify-content: center;
   align-items: center;
   background-color: #333;
-  border-left: solid 1px rgba(0,0,0,.5);
-  border-right: solid 1px rgba(0,0,0,.5);
+  border-left: solid 1px rgba(0, 0, 0, 0.5);
+  border-right: solid 1px rgba(0, 0, 0, 0.5);
   text-align: center;
   height: 46px;
   width: 104px;
@@ -134,8 +134,8 @@ html {
   justify-content: center;
   align-items: center;
   background-color: #333;
-  border-left: solid 1px rgba(0,0,0,.5);
-  border-right: solid 1px rgba(0,0,0,.5);
+  border-left: solid 1px rgba(0, 0, 0, 0.5);
+  border-right: solid 1px rgba(0, 0, 0, 0.5);
   text-align: center;
   height: 46px;
   width: 104px;
@@ -143,7 +143,7 @@ html {
   color: gray;
   font-size: 20px;
   font-weight: bold;
-  font-family: 'Lato';
+  font-family: "Lato";
   border-top: none;
   border-bottom: none;
 }
@@ -154,24 +154,24 @@ html {
   flex-direction: row;
   align-items: center;
   background-color: #333;
-  border-left: solid 1px rgba(0,0,0,.5);
-  border-right: solid 1px rgba(0,0,0,.5);
+  border-left: solid 1px rgba(0, 0, 0, 0.5);
+  border-right: solid 1px rgba(0, 0, 0, 0.5);
   text-align: center;
   height: 46px;
   width: 104px;
   text-decoration: none;
   color: gray;
   font-weight: bold;
-  font-family: 'Lato';
+  font-family: "Lato";
   border-top: none;
   border-bottom: none;
   cursor: pointer;
 }
 
-.my-profile-button:hover, .my-profile-button:focus {
+.my-profile-button:hover,
+.my-profile-button:focus {
   background-color: #444;
 }
-
 
 .dropdown {
   position: relative;
@@ -188,8 +188,8 @@ html {
   justify-content: center;
   align-items: center;
   background-color: #333;
-  border-left: solid 1px rgba(0,0,0,.5);
-  border-right: solid 1px rgba(0,0,0,.5);
+  border-left: solid 1px rgba(0, 0, 0, 0.5);
+  border-right: solid 1px rgba(0, 0, 0, 0.5);
   text-align: center;
   height: 46px;
   width: 104px;
@@ -197,7 +197,7 @@ html {
   color: gray;
   font-size: 20px;
   font-weight: bold;
-  font-family: 'Lato';
+  font-family: "Lato";
   border-top: none;
   border-bottom: none;
 }
@@ -207,8 +207,8 @@ html {
   justify-content: center;
   align-items: center;
   background-color: #333;
-  border-left: solid 1px rgba(0,0,0,.5);
-  border-right: solid 1px rgba(0,0,0,.5);
+  border-left: solid 1px rgba(0, 0, 0, 0.5);
+  border-right: solid 1px rgba(0, 0, 0, 0.5);
   text-align: center;
   height: 46px;
   width: 104px;
@@ -216,11 +216,10 @@ html {
   color: gray;
   font-size: 20px;
   font-weight: bold;
-  font-family: 'Lato';
+  font-family: "Lato";
   border-top: none;
   border-bottom: none;
 }
-
 
 #upload-nav-link:hover,
 #songs-nav-link:hover,
@@ -251,7 +250,7 @@ html {
   text-align: left;
   background-color: #f1f1f1;
   min-width: 100%;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   /* border-radius: 10px; */
   padding: 0;
   list-style-type: none;
@@ -268,7 +267,7 @@ html {
   display: block;
   text-align: left;
   width: 100px;
-  text-align:center;
+  text-align: center;
 }
 
 .profile-dropdown li button:hover,
@@ -280,7 +279,7 @@ html {
 .profile-dropdown li button {
   color: black;
   height: 100%;
-  width:100%;
+  width: 100%;
   text-decoration: none;
   display: block;
   border: none;
