--- a/frontend/src/components/SongPage/SongPage.css
+++ b/frontend/src/components/SongPage/SongPage.css
@@ -313,6 +313,37 @@ html {
   margin: auto;
 }
 
+.date-info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: left;
+  height: 100%;
+  width: 100%;
+}
+
+.date-info > h5 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: left;
+  height: 100%;
+  width: 100%;
+  margin-right: 10px;
+}
+
+.song-page-body-left-lyrics-comments-comment-user-edit {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  height: 100%;
+  width: 100%;
+  margin-right: 10px;
+}
+
 .enter-comment-form > textarea {
   width: 100%;
   height: 250px;
