--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   width: 100%;
   min-height: 100vh;
   background-color: black;
@@ -13,13 +13,13 @@
   background-image: url("../Images/Home\ page.gif");
   background-size: fill;
   background-position: center;
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 600px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 86vh;
-  width: 80vw;
+  /* min-height: 86vh; */
+  /* width: 80vw; */
 
 }
 
@@ -37,22 +37,20 @@
   align-items: center;
 }
 
-footer {
+/* stick footer to the bottom of the page */
+#home-page-container footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: bold;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 5vh;
-  bottom: 0;
-  /* position: fixed; */
-  color: white;
-  background-color: black;
-  font-size: 1.2em;
-  font-weight: bold;
-  /* background-col
-  or: #333; */
-  color: white;
 }
 
 footer > p {
