--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -6,12 +6,13 @@ html {
 
 #nav-bar-container {
   display: flex;
+  /* position: fixed; */
   flex-direction: row;
   align-items: center;
   text-align: center;
   justify-content: center;
   margin: auto;
-  width: 80%;
+  width: 100%;
   height: 46px;
   background-color: #333;
 }
@@ -37,15 +38,19 @@ html {
 
 #top-logo {
   width: 100%;
-  height: 100%;
+  height: 46px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   background-color: white;
 }
 
 #left-nav-links {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   width: 100%;
   height: 100%;
 }
